@@ -1,0 +1,18 @@
+{*
+ * Copyright (c) 2004-2013 OIC Group, Inc.
+ *
+ * This file is part of Exponent
+ *
+ * Exponent is free software; you can redistribute
+ * it and/or modify it under the terms of the GNU
+ * General Public License as published by the Free
+ * Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * GPL: http://www.gnu.org/licenses/gpl.txt
+ *
+ *}
+
+<h2>{'Configure Flyout Sidebar View'|gettext}</h2>
+{control type="radiogroup" name="view_scope" label="View Scope"|gettext value=$config.view_scope|default:'global' items="Global,Sectional,Top Sectional"|gettxtlist values="global,sectional,top-sectional" description="Is content applicable to Entire site, Only this page, or by Top-level page and all its chldren?"|gettext}
+{control type="radiogroup" name="which_side" label="Place sidebar on the"|gettext value=$config.which_side|default:'right' items="Left,Right"|gettxtlist values="left,right"}
