@@ -41,7 +41,8 @@
                     {control type=text name=name label="Name"|gettext value=$section->name}
                     {control type=text name=sef_name label="SEF Name"|gettext value=$section->sef_name description='If you don\'t put in an SEF Name one will be generated based on the title provided. SEF names can only contain alpha-numeric characters, hyphens and underscores.'|gettext}
                     {control type=text name="internal_id" label="Width in Columns"|gettext value=$section->internal_id default=3 description="Enter 1 to 5"|gettext}
-                    {control type="dropdown" name="external_link" label="Dropdown Alignment"|gettext items="Left,Right"|gettxtlist values="left,right" value=$section->external_link}
+                    {*{control type="dropdown" name="external_link" label="Dropdown Alignment"|gettext items="Left,Right"|gettxtlist values="left,right" value=$section->external_link}*}
+                    {control type="radiogroup" name="external_link" label="Dropdown Alignment"|gettext items="Left,Right"|gettxtlist values="left,right" value=$section->external_link|default:"left"}
                     {control type="checkbox" name="public" label="Public"|gettext|cat:"?" checked=$section->public|default:1 value=1}
                     {control type="files" name="files" label="Icon"|gettext value=$section->expFile limit=1}
                 </div>
